# timestamps-generator

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/utils/: input.rs  terminal.rs  timestamp.rs  tui.rs
