[package]
name = "cli_timestamps_generator"
version = "1.0.0"
edition = "2021"
license-file = "./LICENSE.md"
description = "Command Line timestamp processor."
repository = "https://github.com/rmj1001/timestamps-generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "generate-timestamps"
path = "./src/main.rs"

[dependencies]
dialoguer = "0.11.0"
regex = "1.10.3"
